deployments/kubernetes/deploy/channel-mock-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: channel-mock
  labels:
    app: channel-mock
spec:
  replicas: 1
  template:
    metadata:
      name: channel-mock
      labels:
        app: channel-mock
    spec:
      containers:
        - name: channel-mock
          image: pjoc/pay-gateway
          command: [ "bash", "-c", "/app/channel-mock --listen-http=8080 --listen=9090 --log-level=debug" ]
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: channel-mock
