deployments/kubernetes/deploy/channel-mock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: channel-mock
spec:
  selector:
    app: channel-mock
  ports:
    - port: 9090
      name: grpc
  type: ClusterIP
